# catalysis

./: .gitignore  CLAUDE.md  README.md  VLLM_README.md  app.py  app_generator.py  app_loop.py  config.yaml  minimal_test_v2.py  molecule_app.py  pyproject.toml  requirements.txt  run_gmx_campaign.py  simple_test_v2.py
Inputs.simple/: md.mdp  posre.itp  spc216.itp  system.gro  topol.top
config/: simulation_capabilities.yaml
hpc/: globus_compute.py
orchestration/: .cache.py.swp  .gromacs_escalation.py.swp  .molecule_loop.py.swo  .molecule_loop.py.swp  .openmm_escalation.py.swp  cache.py  capabilities.py  characterizers.py  config.py  executors.py  generator_prompts.py  generator_state.py  graph.py  gromacs_escalation.py  ids.py  llm_client.py  loop.py  molecule_loop.py  narrative.py  openmm_escalation.py  scoring.py  seen.py  shepherd_prompts.py  test_registry.py  tools.py  validate.py
scripts/: agent_status.py  argonne_auth.py  check_gc_env.py  check_ml_potentials.py  dashboard.py  example_remote_llm.py  fix_m3gnet.py  generate_gromacs_inputs.py  launch_spark.py  monitor_progress.py  register_function_for_spark.py  register_gc_functions.py  run_catalyst.py  run_discovery.py  run_discovery_academy.py  run_generator.py  run_polaris_agents.py  run_spark_agents.py  shepherd_gc.py  start_vllm_server.py  submit_to_spark.py  test_gc_functions.py  test_single_code.py  watch_narrative.py  whoami_endpoints.py
skills/: base_agent.py  candidates.py  catalyst.py  chemistry.py  economics.py  generator.py  hpc_characterizer.py  llm_proxy_agent.py  microkinetic.py  openmm_skill.py  (+3 more)
(+40 files in other folders)
